setting popup added

--- a/options.html
+++ b/options.html
@@ -1,12 +1,13 @@
 <html>
     <head>
         <title>Cat-astrophe settings</title>
+        <link rel="stylesheet" href="options.css" />
     </head>
     <body>
-       <div> 
+       <div class="container"> 
         <h2>Cat-astrophe settings</h2>
         <label>
-            <input type="radio" id="evilMode"/>enable Evil Mode(aggressively blocking)
+            <input type="checkbox" id="evilMode"/>enable Evil Mode(aggressively blocking)
         </label>
         <label>
             <input type="checkbox" id="typoDetection"> Enable Typo Detection
