fix string mess up

--- a/popup.html
+++ b/popup.html
@@ -23,9 +23,17 @@
     </style>
 </head>
 <body>
-    <h2>🐱 Sassy Cat</h2>
+    <!-- <h2>🐱 Sassy Cat</h2>
     <p id="message">Loading sass...</p>
     <img id="catImage" src="chillcat.jpeg" alt="Sassy Cat">
-    <script src="popup.js"></script>
+    <script src="popup.js"></script> -->
+    <label>
+        <input type="checkbox" id="evilMode"> Evil Mode 😈
+    </label><br>
+    <label>
+        <input type="checkbox" id="typoDetection"> Typo Detection 🧐
+    </label><br>
+    <button id="save">Save</button>
+    <script src="options.js"></script>
 </body>
 </html>
